Settings bug fixes.